<resources>
    <string name="app_name">Pickers</string>
    <string name="lightbulb_text">Lightbulb</string>
    <string name="library_name_text">Pickers</string>
    <!-- COMMON -->
    <string name="picker_ok_text">OK</string>
    <string name="picker_cancel_text">Cancel</string>
    <string name="picker_trigger_input_boxed_text">BOXED</string>
    <string name="picker_trigger_input_outlined_text">OUTLINED</string>
    <string name="picker_trigger_input_button_text">BUTTON</string>
    <string name="picker_trigger_input_image_button_text">IMAGE BUTTON</string>
    <string name="picker_trigger_input_chips_text">CHIPS</string>
    <!-- ADAPTER PICKER DEMO STRINGS -->
    <string name="adapter_picker_demo_text">Adapter picker demo</string>
    <string name="adapter_picker_dialog_title_text">Select an item</string>
    <string name="adapter_picker_dialog_subtitle_text">for the picker</string>
    <string name="adapter_picker_pick_item_text">Pick an item</string>
    <string name="adapter_picker_required_text">Field can not be empty!</string>
    <string name="adapter_picker_chips_title_text">Choose options</string>
    <!-- COLOR PICKER DEMO STRINGS -->
    <string name="color_picker_demo_text">Color picker demo</string>
    <string name="color_picker_dialog_title_text">Select color</string>
    <string name="color_picker_dialog_subtitle_text">for the picker</string>
    <string name="color_picker_pick_item_text">Select color</string>
    <string name="color_picker_required_text">Field can not be empty!</string>
    <!-- ICON PICKER DEMO STRINGS -->
    <string name="icon_picker_demo_text">Icon picker demo</string>
    <string name="icon_picker_dialog_title_text">Select icon</string>
    <string name="icon_picker_dialog_subtitle_text">for the picker</string>
    <string name="icon_picker_pick_item_text">Select icon</string>
    <string name="icon_picker_required_text">Field can not be empty!</string>
    <!-- MONTH PICKER DEMO STRINGS -->
    <string name="month_picker_demo_text">Month picker demo</string>
    <!-- DATE PICKER DEMO STRINGS -->
    <string name="date_picker_demo_text">Date picker demo</string>
    <!-- DATE RANGE PICKER DEMO STRINGS -->
    <string name="date_range_picker_demo_text">Date range picker demo</string>
    <!-- TIME PICKER DEMO STRINGS -->
    <string name="time_picker_demo_text">Time picker demo</string>
    <!-- CHIPS PICKER DEMO STRINGS -->
    <string name="chips_picker_demo_text">Chips picker demo</string>
</resources>