<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.github.rooneyandshadows.lightbulb.pickersdemo.fragments.color_picker.VMColorPickerDemo" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorActionBarBackground"
            app:contentInsetStart="0dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar_layout"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:padding="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center">

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/picker_trigger_input_boxed_text" />

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView
                        android:id="@+id/pickerViewBoxed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:CPV_DialogMessage="@string/color_picker_dialog_subtitle_text"
                        app:CPV_DialogTitle="@string/color_picker_dialog_title_text"
                        app:PV_DialogAnimation="no_animation"
                        app:PV_DialogButtonNegText="@string/picker_cancel_text"
                        app:PV_DialogButtonPosText="@string/picker_ok_text"
                        app:PV_DialogTag="DEMO_PICKER_TAG_BOXED"
                        app:PV_HintText="@string/adapter_picker_pick_item_text"
                        app:PV_Required="true"
                        app:PV_RequiredText="@string/color_picker_required_text"
                        app:colorPickerSelection="@={model.boxedSelection}">

                        <com.github.rooneyandshadows.lightbulb.pickers.dialog.trigger.InputTriggerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:ITV_IconUseAlpha="false" />
                    </com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center">

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/picker_trigger_input_outlined_text" />

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView
                        android:id="@+id/pickerViewOutlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:CPV_DialogMessage="@string/color_picker_dialog_subtitle_text"
                        app:CPV_DialogTitle="@string/color_picker_dialog_title_text"
                        app:PV_DialogAnimation="no_animation"
                        app:PV_DialogButtonNegText="@string/picker_cancel_text"
                        app:PV_DialogButtonPosText="@string/picker_ok_text"
                        app:PV_DialogTag="DEMO_PICKER_TAG_OUTLINED"
                        app:PV_HintText="@string/adapter_picker_pick_item_text"
                        app:PV_Required="true"
                        app:PV_RequiredText="@string/color_picker_required_text"
                        app:colorPickerSelection="@={model.outlinedSelection}">

                        <com.github.rooneyandshadows.lightbulb.pickers.dialog.trigger.InputTriggerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:ITV_IconUseAlpha="false"
                            app:ITV_LayoutType="OUTLINED" />
                    </com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center">

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/picker_trigger_input_button_text" />

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView
                        android:id="@+id/pickerViewButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:CPV_DialogMessage="@string/color_picker_dialog_subtitle_text"
                        app:CPV_DialogTitle="@string/color_picker_dialog_title_text"
                        app:PV_DialogAnimation="no_animation"
                        app:PV_DialogButtonNegText="@string/picker_cancel_text"
                        app:PV_DialogButtonPosText="@string/picker_ok_text"
                        app:PV_DialogTag="DEMO_PICKER_TAG_BUTTON"
                        app:PV_HintText="@string/adapter_picker_pick_item_text"
                        app:PV_Required="true"
                        app:PV_RequiredText="@string/color_picker_required_text"
                        app:colorPickerSelection="@={model.buttonSelection}">

                        <com.github.rooneyandshadows.lightbulb.pickers.dialog.trigger.ButtonTriggerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView>
                </androidx.appcompat.widget.LinearLayoutCompat>
                
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center">

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/picker_trigger_input_image_button_text" />

                        <View
                            style="@style/HorizontalDelimiter"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView
                        android:id="@+id/pickerViewImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:CPV_DialogMessage="@string/color_picker_dialog_subtitle_text"
                        app:CPV_DialogTitle="@string/color_picker_dialog_title_text"
                        app:PV_DialogAnimation="no_animation"
                        app:PV_DialogButtonNegText="@string/picker_cancel_text"
                        app:PV_DialogButtonPosText="@string/picker_ok_text"
                        app:PV_DialogTag="DEMO_PICKER_TAG_IMAGE_BUTTON"
                        app:PV_HintText="@string/adapter_picker_pick_item_text"
                        app:PV_Required="true"
                        app:PV_RequiredText="@string/color_picker_required_text"
                        app:colorPickerSelection="@={model.imageButtonSelection}">

                        <com.github.rooneyandshadows.lightbulb.pickers.dialog.trigger.ImageButtonTriggerView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_button_round_corners"
                            android:elevation="@dimen/system_elevation" />
                    </com.github.rooneyandshadows.lightbulb.pickers.dialog.DialogColorPickerView>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</layout>